# AviUtl2-GradientEditor

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  ThirdPartyNotices.md  aviutl2.toml  package.txt
.github/workflows/: releaser.yaml
script/: @GradientEditor.anm2  aulua.yaml  gradient_map.hlsl  gradient_map.in.anm2  multi_gradient.hlsl  multi_gradient.in.anm2
src/: aviutl2_sdk.h  main.cpp
src/core/: app.cpp  app.h  app_state.cpp  app_state.h  constants.h  d3d_manager.cpp  d3d_manager.h  script_bridge.cpp  script_bridge.h  window_manager.cpp  window_manager.h
src/fonts/: ImGuiFontCodegen.cmake
src/shaders/: CompileShaders.cmake  color.hlsli  pixel_shader.h  pixel_shader.hlsl  vertex_shader.h  vertex_shader.hlsl
src/ui/: main_view.cpp  main_view.h
src/ui/style/: imgui_style.h
src/ui/widgets/: gradient_data.cpp  gradient_data.h  gradient_marker.cpp  gradient_marker.h  gradient_preset.h  gradient_renderer.cpp  gradient_renderer.h  gradient_widget.cpp  gradient_widget.h  menu_bar.cpp  menu_bar.h  preset_controller.cpp  preset_controller.h  preset_window.cpp  preset_window.h
src/utils/aviutl2/: alias_parser.h  config2_utils.h  logger_wrapper.h  plugin2_utils.h
src/utils/common/: color_conv.h  font_loader.h  str_conv.h
src/utils/imgui/: imgui_utils.cpp  imgui_utils.h
tool/: ChangelogExtract.cs
translations/: English.GradientEditor.aul2  简体中文.GradientEditor.aul2
